--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,130 @@
 	color: rgb(60,60,60);
 	box-sizing: border-box;
 }
-
+body,html {
+	position: relative;
+	min-width: 100%;
+	min-height: 100%;
+}
 body {
 	font-size: 62.5%;
 	font-family: 'Ubuntu';
-	padding: 5% 5%;
+	-webkit-font-smoothing: antialiased;
 }
 
 
+body>ol, body>form, body>fieldset, body>nav:last-of-type, section {
+	padding: 5% 10%;
+}
 
+
+/*************/
+/* BIG IMAGE */
+/*************/
+
+
+body>article {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	padding-left: 10%;
+}
+article>h1 {
+	font-size: 3rem;
+	font-weight: 100;
+	z-index: 10;
+	margin-bottom: 0.5rem;
+}
+body>article img {
+	position: absolute;
+	width: 100%;
+	height: auto;
+
+}
+article figure {
+	display: block;
+	position: absolute;
+	width: 100vw;
+	height: 100vh;
+	left: 0;
+	top: 0;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+}
+article figcaption {
+	display: block;
+	width: 40%;
+	z-index: 20;
+
+}
+body>article h1, article figcaption p, article footer, article time, article figcaption a {
+	color: rgb(255,255,255);
+}
+article footer {
+	margin-top: 0.5rem;
+}
+article footer:before {
+	content: "";
+	display: block;
+	width: 1.5rem;
+	height: 1px;
+	background-color: rgb(255,255,255);
+	margin: 1rem 0 1rem 0;
+}
+@media screen and (orientation:portrait) {
+	article h1, article figcaption p, article figcaption footer, article figcaption time, article figcaption a {
+		color: rgb(60,60,60) !important;
+	}
+	article footer:before {
+		background-color: rgb(60,60,60);
+	}
+	body>article figure:last-of-type {
+		background-image: url('img/wintersport.jpg');
+	}
+}
+@media screen and (orientation:landscape) {
+	body>article figure:first-of-type {
+		background-image: url('img/surf.jpg');
+	}
+}
+
+body>article img:after {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: 20;
+	background-color: rgba(60, 160, 240, 0.5);
+}
+
+
+/*******************/
+/* INLINE ELEMENTS */
+/*******************/
+
+h1:not(body h1) {
+	margin-bottom: 1rem;
+}
+p {
+	font-size: 1.25em;
+	line-height: 1.5em;
+	letter-spacing: 0.05em;
+	color: rgb(140,140,140);
+}
+
+/*******/
 /* NAV */
+/*******/
 
 nav h1 {
 	display: none;
@@ -26,37 +140,41 @@ nav:first-of-type {
 	top: 0;
 	left: 0;
 	width: 100vw;
-	background-color: rgba(250,250,250,0.98);
-	height: min-content;
-	box-shadow: 0 0 10px rgba(0,0,0,0.2);
+	z-index: 99;
 }
 
 nav:first-of-type>ul li {
 	display: inline-block;
-	vertical-align: top;
 }
 nav:first-of-type>ul a {
 	display: block;
 	font-size: 1.4em;
-	line-height: 3rem;
-	height: 3rem;
+	line-height: 4rem;
+	height: 4rem;
 	padding: 0 1rem;
 }
 
-nav li:nth-of-type(2):hover ul {
-	height: min-content;
-}
 nav>ul {
-	background-color: rgba(255,255,255,0.98);
+	background-color: rgb(255,255,255);
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+	padding: 0 10%;
+	margin-left: -1rem;
 }
+
+/* SUB NAV */
+
+
 li ul {
 	position: absolute;
 	height: 0;
 	overflow: hidden;
-	background-color: rgba(255,255,255,0.98);
+	z-index: -1;
+	transition: all 500ms ease-in;
 }
-li ul:focus-within {
-	height: min-content; 
+li:hover>ul, li ul:focus-within {
+	height: 4rem;
+	transition: all 500ms ease-out;
+	overflow: visible;
 }
 li ul li {
 	display: block;
@@ -68,7 +186,7 @@ nav ul a:after {
 	display: block;
 	width: 0;
 	height: 1px;
-	top: -2px;
+	top: -1px;
 	left: 50%;
 	background-color: rgb(60, 160, 240);
 	transition: all 300ms ease;
@@ -78,40 +196,49 @@ nav ul a:hover:after {
 	left: 0%;
 }
 
-
+/* NAV FORM */
 nav:first-of-type form {
-	float: right;
 	display: grid;
-	height: 0;
-	padding: 0 1rem;
+	padding: 0.3rem 10%;
+	top: -4rem;
+	position: relative;
+	float: right;
 	width: min-content;
+	height: 100%;
 	overflow: hidden;
-	z-index: -10;
 	font-size: 1.2em;
 	grid-template-areas: 'user userIn check  stayin'
-                         'pass passIn forgot .     '
-                         '.    login  .      .     ';
-	grid-template-columns: auto auto 1rem auto auto;
-    grid-template-rows: auto auto auto;
-    grid-gap: 0.2rem 0.4rem;
-    transition: all 300ms ease 1s;
-}
-nav:first-of-type:hover form {
-	height: initial;
-	padding: 1rem;
-	transition: all 300ms ease;
+                         'pass passIn login  .     '
+                         '.    .      forgot .     ';
+	grid-template-columns: auto auto 0.6rem auto;
+    grid-template-rows: auto auto 0;
+    grid-gap: 0.2rem 0.2rem;
+    transition: top 300ms ease 1s;
+    z-index: -10;
+    transition: all 250ms ease-in 1000ms;
 }
 nav:first-of-type form:before {
 	content: '';
-	position: absolute;
+	position: fixed;
 	display: block;
-	background-color: rgba(245,245,245,0.98);
+	width: 100vw;
+	height: 4rem;
+	left: 0;
+	background-color: rgba(248,248,248,0.98);
 	z-index: -10;
 }
+nav:first-of-type:hover form, nav:first-of-type form:focus-within, nav:first-of-type ul:focus-within + form {
+	top: 0;
+	transition: top 250ms ease-out;
+}
+
+
 nav:first-of-type>form label, nav:first-of-type>form input, nav:first-of-type>form a, nav:first-of-type>form button {
 	color: rgb(140,140,140);
 	font-weight: 100;
 	padding: 0.1rem;
+	height: 1.6rem;
+	line-height: 1.6rem;
 	white-space: nowrap;
 }
 nav:first-of-type>form label:nth-of-type(1) {
@@ -134,29 +261,76 @@ nav:first-of-type>form label:nth-of-type(3) {
 }
 nav:first-of-type>form a {
 	grid-area: forgot;
+	display: block;
+	position: relative;
+	left: -1.7rem;
+	top: -1.65rem;
+	width: 0;
+	height: 0;
+	color: transparent;
+	visibility: hidden;
+}
+nav:first-of-type>form a:before {
+	visibility: visible !important;
+	display: flex;
+	content: "?";
+	justify-content: center;
+	align-items: center;
+	width: 1rem;
+	height: 1rem;
+	border: 0.05rem solid rgb(140,140,140);
+	color: rgb(140,140,140);
+	border-radius: 0.15rem;
 }
 nav:first-of-type>form button {
+	display: block;
+	width: min-content;
+	padding: 0 1rem;
 	grid-area: login;
 
 }
 
-input {
-	border: 0.05rem solid rgb(220,220,220);
+@media (min-width: 700px) {
+	nav:first-of-type form {
+		padding-top: 1.2rem;
+		grid-template-areas: 'user userIn pass passIn forgot login check stayin';
+		grid-template-columns: auto;
+     }
+     nav:first-of-type>form a {
+		grid-area: forgot;
+		display: block;
+		position: relative;
+		left: -1.7rem;
+		top: 0.15rem;
+		width: 0;
+		height: 0;
+		color: transparent;
+		visibility: hidden;
+	}
+}
+
+input, textarea {
+	border: 0.05rem solid rgb(140,140,140);
 	border-radius: 0.15rem;
 	background-color: transparent;
+}
+textarea {
+	padding: 1rem;
 }
 form a:hover {
 	text-decoration: underline;
 }
-
-form button {
-	background-color: transparent;
-	border: 0.05rem solid rgb(150,150,150);
-	color: rgb(150,150,150);
-	border-radius: 0.15rem;
+button, form a:before {
 	transition: background 200ms ease, color 200ms ease;
 }
-button:hover {
+form button {
+	background-color: transparent;
+	border: 0.05rem solid rgb(140,140,140);
+	color: rgb(140,140,140);
+	border-radius: 0.15rem;
+}
+button:hover, nav form a:hover:before {
+	cursor: pointer;
 	background-color: rgb(60, 160, 240);
 	border-color: rgb(60, 160, 240);
 	color: rgb(255,255,255) !important;
@@ -164,12 +338,288 @@ button:hover {
 
 
 
+/***************/
+/* BLOCK LINKS */
+/***************/
 
-/* INLINE ELEMENTS */
-
-h1 {
-	margin-top: 1em;
+section {
+	display: grid;
+	grid-template-areas: 'a b b'
+                         'a c d'
+                         'e c d'
+                         'f f g';
+	grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto auto;
+    grid-gap: 1rem;
+    align-items: stretch;
+	justify-items: stretch; 
 }
+@media screen and (orientation:portrait) {
+	section {
+		grid-template-areas: 'a b'
+	                         'a c'
+	                         'd c'
+	                         'e e'
+	                         'f g';
+    }
+}
+@media (max-width: 640px) {
+	section {
+		grid-template-areas: 'a'
+							 'b'
+							 'c'
+							 'd'
+							 'e'
+							 'f'
+							 'g';
+    }
+}
+section>article:nth-of-type(1) {
+	grid-area: a;
+}
+section>article:nth-of-type(2) {
+	grid-area: b;
+}
+section>article:nth-of-type(3) {
+	grid-area: c;
+}
+section>article:nth-of-type(4) {
+	grid-area: d;
+}
+section>article:nth-of-type(5) {
+	grid-area: e;
+}
+section>article:nth-of-type(6) {
+	grid-area: f;
+}
+section>article:nth-of-type(7) {
+	grid-area: g;
+}
+section>article {
+	display: subgrid;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	align-items: start;
+	justify-items: start; 
+	grid-template-areas: 'img h'
+                         'img p'
+                         'img .';
+	grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    grid-gap: 0.2rem 0.4rem;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+	border-radius: 0.3rem;
+	transition: transform 200ms ease-out 50ms;
+	margin: 2.5% 0;
+}
+
+
+section img {
+	display: block;
+	position: relative;
+	width: 100%;
+	height: auto;
+	border-radius: 0.1rem;
+	grid-area: img;
+}
+section h1 {
+	grid-area: h;
+	padding: 2rem 2rem 0.5rem 2rem;
+}
+section p {
+	grid-area: p;
+	padding: 0.5rem 2rem 2rem 2rem;
+}
+section img {
+	-webkit-filter: grayscale(60%);
+    filter: grayscale(60%);
+    transition: filter 300ms ease;
+}
+
+section>article:hover img {
+	-webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+}
+
+section a:after {
+	content: "";
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+}
+
+
+/**********/
+/* RATING */
+/**********/
+
+fieldset {
+	display: block;
+	position: relative;
+	padding: 1rem;
+}
+fieldset legend {
+	display: none;
+}
+fieldset input {
+	display: inline-block;
+	width: 2rem;
+	visibility: hidden;
+}
+fieldset label {
+	position: absolute;
+	color: transparent;
+	width: 3rem;
+}
+svg {
+	display: block;
+	width: 2rem;
+	position: relative;
+	left: calc(-1rem / 3 * 2);
+	top: -1.5rem;
+	opacity: 0.5;
+	transition: all 100ms ease;
+	width: 50%;
+	border-radius: 50%;
+	border: 0rem solid rgb(230,230,230);
+}
+fieldset  input[type=radio]:checked + label svg {
+	transform: scale(1.3);
+	opacity: 1;
+	border: 0.1rem solid rgb(230,230,230);
+}
+fieldset svg:hover {
+	opacity: 1;
+}
+
+
+/********/
+/* CHAT */
+/********/
+
+
+body>ol {
+	display: block;
+	width: 100%;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	flex-direction: column;
+	background-color: rgb(250,250,250)
+}
+body>ol li {
+	display: block;
+	position: relative;
+	width: 47.5%;
+	padding: 1rem;
+	background-color: rgb(60, 160, 240);
+	border-radius: 0.5rem;
+	transition: transform 200ms ease-out 50ms, box-shadow 200ms ease-out 50ms;
+	box-shadow: 0 0 0px rgba(0,0,0,0);
+}
+body>ol li:hover {
+	transform: scale(1.01);
+	transition: transform 125ms ease-out, box-shadow 125ms ease-out;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+body>ol li:hover:after {
+	top: calc(102% / 3 - 0.5rem);
+	transition: top 100ms ease-out;
+}
+body>ol li:nth-of-type(even) {
+	align-self: flex-end;
+	text-align: right;
+}
+body>ol li:after {
+	content: '';
+	display: block;
+	position: absolute;
+	top: calc(100% / 3 - 0.5rem);
+	width: 0;
+	transition: top 200ms ease-out 50ms;
+}
+body>ol li:nth-of-type(odd):after {
+	left: -0.5rem;
+	border-right: 0.5rem solid rgb(60, 160, 240);
+	border-top: 0.5rem solid transparent;
+  	border-bottom: 0.5rem solid transparent;
+}
+body>ol li:nth-of-type(even):after {
+	right: -0.5rem;
+	border-left: 0.5rem solid rgb(60, 160, 240);
+	border-top: 0.5rem solid transparent;
+  	border-bottom: 0.5rem solid transparent;
+}
+
+body>ol p {
+	color: rgb(255,255,255);
+}
+
+
+body>ol footer {
+	display: block;
+	position: relative;
+	margin-top: 0.5rem;
+	width: 100%;
+}
+body>ol footer p, ol time {
+	font-size: 1em;
+	font-weight: 100;
+	color: rgb(240,240,240);
+}
+
+body>ol li:first-of-type footer p:last-of-type, body>ol li:last-of-type footer p:last-of-type {
+	position: absolute;
+	top: 0;
+	right: 0;
+	visibility: hidden;
+}
+body>ol li:first-of-type footer p:last-of-type:before {
+	content: ' \2713 \2713';
+	visibility: visible;
+	position: absolute;
+	right: 0;
+}
+body>ol li:last-of-type footer p:last-of-type:before {
+	content: ' \2713';
+	visibility: visible;
+	position: absolute;
+	right: 0;
+}
+body>ol form {
+	display: block;
+	width: 100%;
+}
+body>ol form label {
+	display: block;
+	width: 100%;
+	margin-top: 1rem;
+}
+body>ol form textarea, body>ol form button {
+	display: inline-block;
+	margin: 0.5rem 0;
+	vertical-align: top;
+	height: 3rem;
+}
+body>ol form textarea {
+	width: 94%;
+	margin-right: 1%;
+}
+body>ol form button {
+	width: 5%;
+}
+
+
+
+
+
+
+
+
 
 
 
