--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ article>h1 {
 	font-size: 3rem;
 	font-weight: 100;
 	z-index: 10;
-	margin-bottom: 0.5rem;
+	margin-bottom: 0.75rem;
 }
 body>article img {
 	position: absolute;
@@ -210,6 +210,7 @@ nav:first-of-type form {
 	grid-template-areas: 'user userIn check  stayin'
                          'pass passIn login  .     '
                          '.    .      forgot .     ';
+	grid-auto-flow: dense;
 	grid-template-columns: auto auto 0.6rem auto;
     grid-template-rows: auto auto 0;
     grid-gap: 0.2rem 0.2rem;
@@ -313,6 +314,7 @@ input, textarea {
 	border: 0.05rem solid rgb(140,140,140);
 	border-radius: 0.15rem;
 	background-color: transparent;
+	padding: 0 0.25rem !important;
 }
 textarea {
 	padding: 1rem;
@@ -353,6 +355,7 @@ section {
     grid-gap: 1rem;
     align-items: stretch;
 	justify-items: stretch; 
+	grid-auto-flow: dense;
 }
 @media screen and (orientation:portrait) {
 	section {
@@ -405,13 +408,14 @@ section>article {
 	grid-template-areas: 'img h'
                          'img p'
                          'img .';
+	grid-auto-flow: dense;
 	grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     grid-gap: 0.2rem 0.4rem;
 	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	border-radius: 0.3rem;
+	overflow: hidden;
 	transition: transform 200ms ease-out 50ms;
-	margin: 2.5% 0;
 }
 
 
@@ -487,14 +491,19 @@ svg {
 	border-radius: 50%;
 	border: 0rem solid rgb(230,230,230);
 }
+fieldset svg:hover {
+	opacity: 1;
+	transform: scale(1.1)
+}
+fieldset  input[type=radio]:active + label svg {
+	transform: scale(1);
+}
 fieldset  input[type=radio]:checked + label svg {
-	transform: scale(1.3);
+	transform: scale(1.35);
 	opacity: 1;
 	border: 0.1rem solid rgb(230,230,230);
 }
-fieldset svg:hover {
-	opacity: 1;
-}
+
 
 
 /********/
