--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body>article {
 	width: 100%;
 	height: 100vh;
 	overflow: hidden;
-	padding-left: 10%;
+	padding: 0 10%;
 }
 article>h1 {
 	font-size: 3rem;
@@ -71,6 +71,9 @@ article figcaption {
 }
 body>article h1, article figcaption p, article footer, article time, article figcaption a {
 	color: rgb(255,255,255);
+}
+article footer, article time, article figcaption a, label {
+	font-size: 1.1em;
 }
 article footer {
 	margin-top: 0.5rem;
@@ -117,11 +120,12 @@ body>article img:after {
 /* INLINE ELEMENTS */
 /*******************/
 
-h1:not(body h1) {
+h1:not(body>h1) {
 	margin-bottom: 1rem;
 }
+
 p {
-	font-size: 1.25em;
+	font-size: 1.4em;
 	line-height: 1.5em;
 	letter-spacing: 0.05em;
 	color: rgb(140,140,140);
@@ -317,7 +321,7 @@ input, textarea {
 	padding: 0 0.25rem !important;
 }
 textarea {
-	padding: 1rem;
+	padding: 0.25rem 0.25rem !important;
 }
 form a:hover {
 	text-decoration: underline;
@@ -417,7 +421,9 @@ section>article {
 	overflow: hidden;
 	transition: transform 200ms ease-out 50ms;
 }
-
+a h1 {
+	font-size: 1.5em;
+}
 
 section img {
 	display: block;
@@ -485,7 +491,7 @@ svg {
 	position: relative;
 	left: calc(-1rem / 3 * 2);
 	top: -1.5rem;
-	opacity: 0.5;
+	opacity: 0.65;
 	transition: all 100ms ease;
 	width: 50%;
 	border-radius: 50%;
@@ -576,7 +582,7 @@ body>ol footer {
 	width: 100%;
 }
 body>ol footer p, ol time {
-	font-size: 1em;
+	font-size: 1.2em;
 	font-weight: 100;
 	color: rgb(240,240,240);
 }
