--- a/untitled.css
+++ b/untitled.css
@@ -23,30 +23,6 @@ body>ol, body>form, body>fieldset, body>nav:last-of-type, section {
 }
 
 
-
-/*******************/
-/* INLINE ELEMENTS */
-/*******************/
-
-
-h1 {
-	font-weight: 400;
-	margin-bottom: 1rem;
-}
-p, input, label, button, textarea {
-	color: rgb(140,140,140);
-}
-input, textarea {
-	font-size: 1.1em;
-}
-
-p {
-	font-size: 1.4em;
-	line-height: 1.5em;
-	letter-spacing: 0.05em;
-}
-
-
 /**********/
 /* LOADER */
 /**********/
@@ -56,15 +32,13 @@ body>div {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
 	width: 100vw;
 	height: 100vh;
 	left: 0;
 	top: 0;
-	background-color: rgb(255,255,255);
+	background-color: rgba(255,255,255,0.9);
 	z-index: 99;
-	animation: welcome 0.5s ease forwards 1s;
-
+	animation: welcome 0.5s linear forwards 1s;
 }
 @keyframes welcome {
     to { 
@@ -72,44 +46,35 @@ body>div {
     	z-index: -99;
     }
 }
-
-body>div div {
+body>div>div {
 	display: flex;
-	align-items: flex-end;
-	height: 0;
-	padding: 2rem;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 20vw;
+	height: 20vh;
+	min-height: min-content;
+	min-width: min-content;
+	left: 40vw;
+	top: 40vh;
+	border-radius: 0.15rem;
+	background-color: rgba(255,255,255,0.95);
 }
-body>div span {
-	display: inline-block;
-	width: 0.75rem;
-	height: 0rem;
-	margin: 0.25rem;
-	border-radius: 0.2rem;
-	background-color: rgb(60, 160, 240);
-	animation: loader 0.3s ease-in-out infinite alternate;
+body>div>div>div {
+	position: relative;
+    width: 4rem;
+    height: 4rem;
+    border: 0.2rem solid rgb(230,230,230);
+    border-top: 0.2rem solid rgb(60,160,240);
+    border-radius: 50%;
+    animation: spinner 1.5s linear infinite;
+    margin-top: 1rem;
 }
-
-body>div span:nth-of-type(2) {
-	animation-delay: 0.1s
-}
-body>div span:nth-of-type(3) {
-	animation-delay: 0.2s
-}
-@keyframes loader {
-    from { 
-    	height: 0.5rem; 
-    }
-    to {
-    	margin-bottom: -0.25rem;
-    	height: 3rem;
+@keyframes spinner {
+    to { 
+    	transform: rotate(360deg);
     }
 }
-
-
-
-
-
-
 
 
 
@@ -134,6 +99,7 @@ article>h1 {
 	font-size: 3rem;
 	font-weight: 100;
 	z-index: 10;
+	margin-bottom: 0.75rem;
 }
 body>article img {
 	position: absolute;
@@ -206,6 +172,29 @@ body>article img:after {
 }
 
 
+/*******************/
+/* INLINE ELEMENTS */
+/*******************/
+
+
+h1 {
+	font-weight: 400;
+}
+p, input, label, button, textarea {
+	color: rgb(140,140,140);
+}
+input, textarea {
+	font-size: 1.1em;
+}
+textarea {
+	resize: none;
+}
+p {
+	font-size: 1.4em;
+	line-height: 1.5em;
+	letter-spacing: 0.05em;
+}
+
 
 /*******/
 /* NAV */
@@ -233,7 +222,7 @@ nav:first-of-type>ul a {
 }
 nav>ul {
 	background-color: rgb(255,255,255);
-	box-shadow: 0 0 1rem rgba(0,0,0,0.1);
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	padding: 0 10%;
 	margin-left: -1rem;
 }
@@ -247,15 +236,12 @@ li ul {
 	height: 0;
 	overflow: hidden;
 	z-index: -1;
-	transition: height 250ms ease-in;
+	transition: height 500ms ease-in;
 	background-color: rgb(248,248,248);
-	box-shadow: 0 0 1rem rgba(0,0,0,0.1);
-	border-bottom-left-radius: 0.25rem;
-	border-bottom-right-radius: 0.25rem;
 }
 li:hover>ul, li ul:focus-within {
 	height: 4rem;
-	transition: height 250ms ease-out 100ms;
+	transition: height 500ms ease-out;
 }
 li ul li {
 	display: block;
@@ -266,11 +252,11 @@ nav ul a:after {
 	position: relative;
 	display: block;
 	width: 0;
-	height: 2px;
-	top: -2px;
+	height: 1px;
+	top: -1px;
 	left: 50%;
 	background-color: rgb(60, 160, 240);
-	transition: all 200ms ease;
+	transition: all 250ms ease;
 }
 nav ul a:hover:after {
 	width: 100%;
@@ -283,8 +269,8 @@ nav ul a:hover:after {
 
 nav:first-of-type form {
 	display: flex;
-	position: relative;
 	justify-content: flex-end;
+	position: relative;
 	align-items: center;
 	top: -4rem;
 	height: 0rem;
@@ -295,7 +281,6 @@ nav:first-of-type form {
     z-index: -10;
     transition: top 400ms ease-in 1000ms, height 400ms ease-in 1000ms;
     background-color: rgb(248,248,248);
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 nav:first-of-type:hover form, nav:first-of-type form:focus-within, nav:first-of-type ul:focus-within + form {
@@ -325,12 +310,10 @@ nav:first-of-type>form a:before {
 	width: 1rem;
 	top: 0.25rem;
 	left: -1rem;
-	height: 1rem;
 	position: absolute;
 	border: 0.05rem solid rgb(140,140,140);
 	color: rgb(140,140,140);
 }
-
 
 nav:first-of-type>form label, nav:first-of-type>form input, nav:first-of-type>form a, nav:first-of-type>form button {
 	font-weight: 100;
@@ -338,7 +321,17 @@ nav:first-of-type>form label, nav:first-of-type>form input, nav:first-of-type>fo
 	line-height: 1.6rem;
 	white-space: nowrap;
 }
-
+nav:first-of-type>form a:before {
+	visibility: visible !important;
+	display: flex;
+	content: "?";
+	justify-content: center;
+	align-items: center;
+	width: 1rem;
+	height: 1rem;
+	border: 0.05rem solid rgb(140,140,140);
+	color: rgb(140,140,140);
+}
 nav:first-of-type ul input {
 	display: none;
 }
@@ -352,7 +345,6 @@ input, textarea {
 	padding: 0 0.25rem !important;
 }
 textarea {
-	resize: none;
 	padding: 0.25rem 0.25rem !important;
 }
 form a {
@@ -374,45 +366,6 @@ button:hover, nav form a:hover:before {
 	color: rgb(255,255,255) !important;
 }
 
-@media screen and (max-width: 800px) {
-	nav:first-of-type form {
-		display: grid;
-		grid-template-areas: 'user userIn .      check stayin'
-                        	 'pass passIn forgot login login';
-		grid-template-columns: auto auto auto auto auto;
-		grid-template-rows: auto auto;
-	    grid-gap: 0 0.25em;
-	}
-	nav:first-of-type>form label:nth-of-type(1) {
-		grid-area: user;
-	}
-	nav:first-of-type>form input:nth-of-type(1) {
-		grid-area: userIn;
-	}
-	nav:first-of-type>form input:nth-of-type(3) {
-		grid-area: check;
-	}
-	nav:first-of-type>form label:nth-of-type(3) {
-		grid-area: stayin;
-	}
-	nav:first-of-type>form label:nth-of-type(2) {
-		grid-area: pass;
-	}
-	nav:first-of-type>form input:nth-of-type(2) {
-		grid-area: passIn;
-	}
-	nav:first-of-type>form a {
-		grid-area: forgot;
-	}
-	nav:first-of-type>form button {
-		grid-area: login;
-
-	}
-	nav:first-of-type>form a:before {
-		top: 0.45rem;
-		left: -1.1rem;
-	}
-}
 
 
 
@@ -495,7 +448,7 @@ section img {
 }
 section h1 {
 	grid-area: h;
-	padding: 2rem 2rem 0rem 2rem;
+	padding: 2rem 2rem 0.5rem 2rem;
 }
 section p {
 	grid-area: p;
@@ -565,17 +518,17 @@ svg {
 	position: absolute;
 	width: 75%;
 	border-radius: 50%;
-	left: -0.85rem;
+	left: calc(-1rem / 3 * 2);
 	top: calc(-1rem / 3 * 2);
 	box-shadow: 0 0 0 0 rgba(60,160,240,0);
+	/*filter: grayscale(60%);*/
 	transition: all 100ms ease;
 	transform-origin: center;
 	overflow: visible !important;
-	filter: grayscale(50%);
 }
 
 fieldset svg:hover {
-	filter: grayscale(0%);
+	/*filter: grayscale(0%);*/
 	transform: scale(1.2)
 }
 
@@ -652,11 +605,6 @@ body>ol {
 	justify-content: center;
 	flex-direction: column;
 	background-color: rgb(250,250,250);
-	background: rgba(60, 160, 240, 0.2); background-image:
-    linear-gradient(90deg, rgba(60, 160, 240, 0.05) 11px, transparent 0),
-    linear-gradient(90deg, rgba(60, 160, 240, 0.15) 23px, transparent 0),
-    linear-gradient(90deg, rgba(60, 160, 240, 0.1) 41px, transparent 0);
-	background-size: 41px 100%, 61px 100%, 83px 100%;
 }
 body>ol li {
 	display: block;
@@ -680,7 +628,6 @@ body>ol li:hover:after {
 body>ol li:nth-of-type(even) {
 	align-self: flex-end;
 	text-align: right;
-	background-color: rgba(60, 160, 240,0.8);
 }
 body>ol li:after {
 	content: '';
@@ -698,7 +645,7 @@ body>ol li:nth-of-type(odd):after {
 }
 body>ol li:nth-of-type(even):after {
 	right: -0.5rem;
-	border-left: 0.5rem solid rgba(60, 160, 240,0.8);
+	border-left: 0.5rem solid rgb(60, 160, 240);
 	border-top: 0.5rem solid transparent;
   	border-bottom: 0.5rem solid transparent;
 }
@@ -763,22 +710,23 @@ body>ol form button {
 
 
 
+nav:last-of-type {
+	display: block;
+}
 
 progress[value] {
-	width: 80%;
+	width: 100%;
 	-webkit-appearance: none;
-	height: 1.5rem;
-	position: absolute;
-	z-index: -1;
+	height: 0.5rem;
 }
 progress[value]::-webkit-progress-bar {
-	background-color: rgb(248,248,248);
-	border-radius: 0.75rem;
+	background-color: rgb(240,240,240);
+	border-radius: 0.25rem;
 	box-shadow: 0 0 1px rgba(0, 0, 0, 0.25) inset;
 	overflow: hidden;
 }
 progress[value]::-webkit-progress-value {
-	background-color: rgb(60,160,240);
+	background-color: rgb(60, 160, 240);
 }
 
 nav:last-of-type ol {
@@ -786,11 +734,7 @@ nav:last-of-type ol {
 	/*width: calc(50% / 3 + 60%);*/
 	justify-content: space-around;
 	font-size: 1.4em;
-	line-height: 1.5rem;
-
-}
-nav:last-of-type li:first-of-type, nav:last-of-type li:first-of-type a {
-	color: rgb(255,255,255);
+	margin-top: 0.5rem;
 }
 
 
@@ -799,5 +743,73 @@ nav:last-of-type li:first-of-type, nav:last-of-type li:first-of-type a {
 
 
 
+/*grid-template-areas: 'user userIn .      check stayin'
+                        	 'pass passIn forgot login login';*/
 
+
+/*grid-template-areas: 'user userIn pass passIn forgot login login check stayin';
+	grid-template-columns: auto auto auto auto auto;
+    grid-gap: 0 0.25em;*/
+
+
+
+
+nav:first-of-type>form label:nth-of-type(1) {
+	grid-area: user;
+}
+nav:first-of-type>form input:nth-of-type(1) {
+	grid-area: userIn;
+}3
+nav:first-of-type>form input:nth-of-type(2) {
+	grid-area: check;
+}
+nav:first-of-type>form label:nth-of-type(2) {
+	grid-area: stayin;
+}
+nav:first-of-type>form label:nth-of-type(3) {
+	grid-area: pass;
+}
+nav:first-of-type>form input:nth-of-type(3) {
+	grid-area: passIn;
+}
+nav:first-of-type>form a {
+	grid-area: forgot;
+	display: block;
+	position: absolute;
+	left: 0rem;
+	top: 0rem;
+	width: 0;
+	height: 0;
+	color: transparent;
+}
+nav:first-of-type>form button {
+	display: block;
+	grid-area: login;
+
+}
+
+nav:first-of-type>form a:before {
+	visibility: visible !important;
+	display: flex;
+	content: "?";
+	justify-content: center;
+	align-items: center;
+	width: 1rem;
+	top: 0.4em;
+	left: 0.25em;
+	position: absolute;
+	border: 0.05rem solid rgb(140,140,140);
+	color: rgb(140,140,140);
+}
+
+nav:first-of-type>form a {
+	grid-area: forgot;
+	display: block;
+	position: relative;
+	left: -1.7rem;
+	top: 0.15rem;
+	width: 0;
+	height: 0;
+	color: transparent;
+}
 
