--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 
 :root {
   --main-blue-color: rgb(60,160,240);
+  --main-gray-color: rgb(140,140,140)
 }
 
 /********/
@@ -46,7 +47,7 @@ h1 {
 	margin-bottom: 1rem;
 }
 p, input, label, button, textarea {
-	color: rgb(140,140,140);
+	color: var(--main-gray-color);
 }
 
 label, button, input, textarea {
@@ -124,7 +125,6 @@ body>div span:nth-of-type(3) {
 /* HERO */
 /********/
 
-
 body>article {
 	display: flex;
 	flex-direction: column;
@@ -138,14 +138,11 @@ body>article {
 }
 article>h1 {
 	font-size: 3rem;
-	font-weight: 100;
-	z-index: 10;
 }
 body>article img {
 	position: absolute;
 	width: 100%;
 	height: auto;
-
 }
 article figure {
 	display: block;
@@ -154,6 +151,7 @@ article figure {
 	height: 100vh;
 	left: 0;
 	top: 0;
+	z-index: -1;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -161,10 +159,8 @@ article figure {
 }
 article figcaption {
 	display: block;
-	width: 40%;
-	z-index: 20;
+	width: 50%;
 }
-
 body>article h1, article figcaption p, article footer, article time, article figcaption a {
 	color: rgb(255,255,255);
 }
@@ -181,23 +177,6 @@ article footer:before {
 	height: 1px;
 	background-color: rgb(255,255,255);
 	margin: 1rem 0 1rem 0;
-}
-@media screen and (orientation:portrait) {
-	article h1, article figcaption p, article figcaption footer, article figcaption time, article figcaption a {
-		color: rgb(60,60,60) !important;
-	}
-	article footer:before {
-		background-color: rgb(60,60,60);
-	}
-	body>article figure:last-of-type {
-		background-image: url('img/wintersport.jpg');
-		filter: blur(0.25rem);
-	}
-}
-@media screen and (orientation:landscape) {
-	body>article figure:first-of-type {
-		background-image: url('img/surf.jpg');
-	}
 }
 figcaption a {
 	display: inline-block;
@@ -227,6 +206,26 @@ body>article img:after {
 	height: 100vh;
 	z-index: 20;
 	background-color: rgba(60, 160, 240, 0.5);
+}
+@media screen and (orientation:portrait) {
+	article h1, article figcaption p, article figcaption footer, article figcaption time, article figcaption a {
+		color: rgb(60,60,60) !important;
+	}
+	article footer:before, figcaption a:after {
+		background-color: rgb(60,60,60);
+	}
+	body>article figure:last-of-type {
+		background-image: url('img/wintersport.jpg');
+		filter: blur(0.25rem);
+	}
+	article figcaption {
+		width: 100%;
+	}
+}
+@media screen and (orientation:landscape) {
+	body>article figure:first-of-type {
+		background-image: url('img/surf.jpg');
+	}
 }
 
 
@@ -317,7 +316,7 @@ nav:first-of-type:after {
 	top: 0;
 	line-height: 4rem;
 	z-index: 99;
-	color: rgb(120,120,120);
+	color: rgb(100,100,100);
 	font-size: 1.2em;
 	padding: 0 1rem;
 }
@@ -367,8 +366,8 @@ nav:first-of-type>form a:before {
 	left: -1rem;
 	height: 1rem;
 	position: absolute;
-	border: 0.05rem solid rgb(140,140,140);
-	color: rgb(140,140,140);
+	border: 0.05rem solid var(--main-gray-color);
+	color: var(--main-gray-color);
 }
 nav:first-of-type>form label, nav:first-of-type>form input, nav:first-of-type>form a, nav:first-of-type>form button {
 	font-weight: 100;
@@ -384,7 +383,7 @@ form a, form button, form a:before, input, textarea {
 	margin: 0 0.2rem;
 }
 input, textarea {
-	border: 0.05rem solid rgb(140,140,140);
+	border: 0.05rem solid var(--main-gray-color);
 	background-color: transparent;
 	padding: 0.2rem 0.3rem;
 }
@@ -400,9 +399,8 @@ button, form a:before {
 }
 form button {
 	background-color: transparent;
-	border: 0.05rem solid rgb(140,140,140);
-	color: rgb(140,140,140);
-	
+	border: 0.05rem solid var(--main-gray-color);
+	color: var(--main-gray-color);
 }
 button:hover, button:focus, nav form a:hover:before, nav form a:focus:before {
 	cursor: pointer;
@@ -410,6 +408,9 @@ button:hover, button:focus, nav form a:hover:before, nav form a:focus:before {
 	border-color: var(--main-blue-color);
 	color: rgb(255,255,255) !important;
 }
+
+/* NAV LOGIN FORM | responsive grid */
+
 @media screen and (max-width: 800px) {
 	nav:first-of-type form {
 		display: grid;
@@ -457,11 +458,7 @@ nav input, textarea {
 nav input:hover, textarea:hover {
 	border-color: var(--main-blue-color);
 	box-shadow: 0 0 0 1px var(--main-blue-color);
-	/*transform: scaleY(1.1);*/
 }
-/*nav input:active, textarea:active {
-	transform: scaleY(1);
-}*/
 nav input[type="checkbox"] {
 	border-color: transparent;
 	box-shadow: 0 0 0 0 transparent;
@@ -488,7 +485,7 @@ nav input:last-of-type:after {
 	margin-top: 0.2rem;
 	margin-left: -0.25rem;
 	border-radius: 0.15rem;
-	border: 1px solid rgb(140,140,140);
+	border: 1px solid var(--main-gray-color);
 	transition: all 100ms ease;
 	color: rgb(255,255,255);
 	text-align: center;
@@ -525,7 +522,7 @@ em {
 	margin-top: 0.55em;
 	margin-right: 0.2rem;
 	font-weight: 100;
-	color: rgb(140,140,140);
+	color: var(--main-gray-color);
 	font-family: 'Bad Script', cursive;
 }
 section {
@@ -601,17 +598,17 @@ section p {
 }
 section a:before {
 	content: '';
-	position: relative;
+	position: absolute;
 	display: block;
-	width: 0;
-	left: 50%;
-	height: 3px;
+	width: 100%;
+	height: 5px;
 	background-color: var(--main-blue-color);
-	transition: width 250ms ease, left 250ms ease;
+	transition: transform 150ms ease;
+	transform: scaleY(0);
+	transform-origin: center top;
 }
 section article:focus-within a:before, section a:hover:before {
-	width: 100%;
-	left: 0%;
+	transform: scaleY(1);
 }
 section a:after {
 	content: "";
@@ -664,13 +661,11 @@ svg {
 	overflow: visible !important;
 	filter: grayscale(65%);
 }
-
 fieldset svg:hover, fieldset input:focus + label svg {
 	filter: grayscale(0%);
 	transform: scale(1.2);
 	border: 0.1rem solid rgb(200,200,200);
 }
-
 fieldset input[type=radio] {
 	border: 0.1rem solid transparent;
 }
@@ -682,7 +677,6 @@ fieldset input[type=radio]:checked + label svg {
 	border: 0.1rem solid rgba(60,160,240,1);
 	filter: grayscale(0%);
 }
-
 fieldset input[type=radio]:after {
 	content: "";
 	display: block;
@@ -715,12 +709,11 @@ fieldset input[type=radio]:checked:after {
 fieldset input[type=radio]:nth-of-type(2):checked:after {
 	transform: scale(1) rotate(-5deg);
 }
-
 fieldset label:first-of-type svg g path:first-of-type, fieldset label:first-of-type svg path:first-of-type {
-	transition: 200ms ease-in-out;
+	transition: 200ms ease;
 }
 fieldset label:first-of-type:hover svg g path:first-of-type {
-	transform: translateX(0.25rem) translateY(-0.1rem);
+	transform: translateX(0.2rem) translateY(-0.1rem);
 }
 fieldset label:first-of-type svg>path:first-of-type {
 	transform: scaleY(0.4);	
@@ -729,7 +722,6 @@ fieldset label:first-of-type svg>path:first-of-type {
 fieldset input[type=radio]:checked + label:first-of-type svg>path:first-of-type {
 	transform: scaleY(1.2);
 }
-
 
 /********/
 /* CHAT */
@@ -792,11 +784,9 @@ body>ol li:nth-of-type(even):after {
 	border-top: 0.5rem solid transparent;
   	border-bottom: 0.5rem solid transparent;
 }
-
 body>ol p {
 	color: rgb(255,255,255);
 }
-
 body>ol li:nth-of-type(even) p, body>ol li:nth-of-type(even) time {
 	color: rgb(60,60,60) !important;
 }
@@ -811,7 +801,6 @@ body>ol footer p, ol time {
 	font-weight: 100;
 	color: rgb(240,240,240);
 }
-
 body>ol li:first-of-type footer p:last-of-type, body>ol li:last-of-type footer p:last-of-type {
 	position: absolute;
 	top: 0;
@@ -852,10 +841,10 @@ body>ol form textarea {
 body>ol form button {
 	width: 4.5rem;
 }
+
 /****************/
 /* FINISH ORDER */
 /****************/
-
 
 progress[value] {
 	width: 80%;
@@ -871,9 +860,6 @@ progress[value]::-webkit-progress-bar {
 	overflow: hidden;
 }
 progress[value]::-webkit-progress-value {
-	/*background: linear-gradient( 60deg, rgb(60,160,240) 0%, rgb(200,160,240) 100%),
-				linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25));
-	background-size: 80px 100%;*/
 	background-image: 
 		-webkit-linear-gradient(-45deg,
 	                           transparent 0%, rgba(0, 0, 0, .1) 33%,
@@ -885,13 +871,7 @@ progress[value]::-webkit-progress-value {
     border-radius: 2px;
     background-size: 35px 2rem, 100% 100%, 100% 100%;
 	animation: progressAnim 1s ease infinite 2s;
-
 }
-/*@keyframes progressAnim {
-    to {
-    	background: linear-gradient( 180deg, rgb(60,160,240) 50%, rgb(200,160,240) 100%); 
-    }
-}*/
 nav:last-of-type ol {
 	display: flex;
 	justify-content: space-around;
@@ -918,11 +898,8 @@ nav:last-of-type a:after {
 nav:last-of-type li:nth-of-type(2) a:after {
 	background-color: var(--main-blue-color);
 }
-nav:last-of-type a:hover:after {
+nav:last-of-type a:hover:after, nav:last-of-type a:focus:after {
 	width: 100%;
 	left: 0%;
 }
-
-
-
 
