--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@
 }
 body,html {
 	position: relative;
-	min-width: 100%;
-	min-height: 100%;
+	height: 100%;
+	width: 100%;
 }
 body {
 	font-size: 62.5%;
@@ -136,33 +136,45 @@ body>article {
 	overflow: hidden;
 	padding: 0 10%;
 }
-article>h1 {
+article h1 {
 	font-size: 3rem;
 }
-body>article img {
-	position: absolute;
-	width: 100%;
-	height: auto;
-}
 article figure {
-	display: block;
 	position: absolute;
 	width: 100vw;
 	height: 100vh;
 	left: 0;
 	top: 0;
 	z-index: -1;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-attachment: fixed;
 }
 article figcaption {
-	display: block;
-	width: 50%;
+	display: flex;
+	position: relative;
+	align-items: flex-start;
+	justify-content: center;
+	flex-direction: column;
+	height: 100%;
+	width: 50vw;
+	padding-bottom: 5%;
+}
+article figure img {
+	position: absolute;
+	width: 100%;
+	height: 100vh;
+	object-fit: cover;
+	object-position: center;
+}
+article figure img:first-of-type {
+	opacity: 0;
+	transition: all 400ms ease;
+	z-index: 1;
+}
+article figure img:last-of-type {
+	filter: blur(0.3rem);
 }
 body>article h1, article figcaption p, article footer, article time, article figcaption a {
 	color: rgb(255,255,255);
+	transition: all 400ms ease;
 }
 article footer, article time, article figcaption a, label {
 	font-size: 1.1em;
@@ -196,17 +208,7 @@ figcaption a:hover:after, figcaption a:focus:after {
 	width: 100%;
 	left: 0;
 }
-body>article img:after {
-	content: "";
-	display: block;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	z-index: 20;
-	background-color: rgba(60, 160, 240, 0.5);
-}
+
 @media screen and (orientation:portrait) {
 	article h1, article figcaption p, article figcaption footer, article figcaption time, article figcaption a {
 		color: rgb(60,60,60) !important;
@@ -214,18 +216,24 @@ body>article img:after {
 	article footer:before, figcaption a:after {
 		background-color: rgb(60,60,60);
 	}
-	body>article figure:last-of-type {
+	article figure>img:first-of-type {
+		opacity: 0;
+	}
+	/*body>article figure:last-of-type {
 		background-image: url('img/wintersport.jpg');
 		filter: blur(0.25rem);
-	}
+	}*/
 	article figcaption {
 		width: 100%;
 	}
 }
 @media screen and (orientation:landscape) {
-	body>article figure:first-of-type {
-		background-image: url('img/surf.jpg');
+	article figure>img:first-of-type {
+		opacity: 1;
 	}
+	/*body>article figure:first-of-type {
+		background-image: url('img/surf.jpg');
+	}*/
 }
 
 
